--- a/config.yaml
+++ b/config.yaml
@@ -24,12 +24,12 @@ schema:
   tedapi_report_vitals: bool
   tedapi_poll_interval: "int(5,300)"
   mqtt_base_topic: str
-  mqtt_server: "str?"
+  mqtt_host: "str?"
   mqtt_port: "port?"
   mqtt_ssl: bool
   mqtt_ca: "str?"
   mqtt_key: "str?"
   mqtt_cert: "str?"
   mqtt_verify_tls: "bool?"
-  mqtt_user: "str?"
+  mqtt_username: "str?"
   mqtt_password: "str?"
